// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (deprecated rules) replaced by ESLint core rule uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) replaced by ESLint core rule uses correct replacement rule link 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by [\`no-unused-vars\`](https://eslint.org/docs/latest/rules/no-unused-vars).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule uses correct replacement rule link 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by \`other-plugin/no-unused-vars\`.

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule with same rule name as one of our rules uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) replaced by third-party plugin rule with same rule name as one of our rules uses correct replacement rule link 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by \`other-plugin/no-foo\`.

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) updates the documentation 1`] = `
"# eslint-plugin-test
Description.
## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.\\
❌ Deprecated.

| Name                           | Description            | 💼 | ❌  |
| :----------------------------- | :--------------------- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | ✅  |    |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. |    | ❌  |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  | ❌  |
| [no-qux](docs/rules/no-qux.md) | Description of no-qux. |    |    |

<!-- end auto-generated rules list -->
more content.

"
`;

exports[`generate (deprecated rules) updates the documentation 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description of no-foo.

<!-- end auto-generated rule header -->
## Rule details
details
## Options
optionToDoSomething1 - explanation
optionToDoSomething2 - explanation
"
`;

exports[`generate (deprecated rules) updates the documentation 3`] = `
"# test/no-bar

💼 This rule is enabled in the ✅ \`recommended\` config.

📝 Description of no-bar.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) updates the documentation 4`] = `
"# test/no-baz

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md), [\`test/no-qux\`](no-qux.md).

📝 Description of no-baz.

<!-- end auto-generated rule header -->
## Rule details
details
"
`;

exports[`generate (deprecated rules) updates the documentation 5`] = `
"# test/no-qux

📝 Description of no-qux.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) using prefix ahead of replacement rule name uses correct replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                           | Description  | ❌  |
| :----------------------------- | :----------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description. |    |
| [no-foo](docs/rules/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) using prefix ahead of replacement rule name uses correct replacement rule link 2`] = `
"# test/no-foo

❌ This rule is deprecated. It was replaced by [\`test/no-bar\`](no-bar.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) using prefix ahead of replacement rule name uses correct replacement rule link 3`] = `
"# test/no-bar

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with --path-rule-doc has the correct links, especially replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                              | Description  | ❌  |
| :------------------------------------------------ | :----------- | :- |
| [category/no-bar](docs/category/no-bar/README.md) | Description. | ❌  |
| [category/no-foo](docs/category/no-foo/README.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with --path-rule-doc has the correct links, especially replacement rule link 2`] = `
"# test/category/no-foo

❌ This rule is deprecated. It was replaced by [\`test/category/no-bar\`](../no-bar/README.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with --path-rule-doc has the correct links, especially replacement rule link 3`] = `
"# test/category/no-bar

❌ This rule is deprecated. It was replaced by [\`test/category/no-foo\`](../no-foo/README.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with nested rule names has the correct links, especially replacement rule link 1`] = `
"<!-- begin auto-generated rules list -->

❌ Deprecated.

| Name                                             | Description  | ❌  |
| :----------------------------------------------- | :----------- | :- |
| [category/no-bar](docs/rules/category/no-bar.md) | Description. | ❌  |
| [category/no-foo](docs/rules/category/no-foo.md) | Description. | ❌  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (deprecated rules) with nested rule names has the correct links, especially replacement rule link 2`] = `
"# test/category/no-foo

❌ This rule is deprecated. It was replaced by [\`test/category/no-bar\`](no-bar.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with nested rule names has the correct links, especially replacement rule link 3`] = `
"# test/category/no-bar

❌ This rule is deprecated. It was replaced by [\`test/category/no-foo\`](no-foo.md).

📝 Description.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (deprecated rules) with no rule doc but --ignore-deprecated-rules omits the rule from the README and does not try to update its non-existent rule doc 1`] = `
"<!-- begin auto-generated rules list -->

| Name |
| :--- |

<!-- end auto-generated rules list -->"
`;
